# liquidations-bot

./: .gitignore  Cargo.toml  docker-compose.yml
migrations/2023-11-06-210858_create_liquidations/: down.sql  up.sql
src/: config.rs  main.rs  models.rs  schema.rs
