[package]
name = "liquidation-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
serde = {version = "1.0.190", features=["derive"]}
serde_json = "1.0.108"
tungstenite = { version = "0.20.1", features = ["native-tls"] }
diesel = { version = "2.1.0", features = ["postgres", "numeric"] }
bigdecimal = { version = "0.4.2", features= ["serde"]}
